2007-09-27  Brandon Lewis  <brandon_lewis@berkeley.edu>

	* pitivi/project.py:
	Adjusted code to work with changes to projectsaver interface
	* pitivi/projectsaver.py:
	Redesigned projectsaver interface. no longer has facilities for
	"registering" formats, since this can be handled by pluginmanager.
	Factored out pickle file format into subclass of projectsaver
	Removed the global function newProjectSaver from the module, in
	favor of project saver class method which does the same thing
	* tests/test_file_load_save.py:
	adjusted test cases changes to projectsaver interface

2007-09-26  Brandon Lewis  <brandon_lewis@berkeley.edu>

	* pitivi/pluginmanager.py:
	changed "plugin-activated-changed" to "plugin-enabled-changed" in
	signal declaration, since this is used in comments and elsewhere
	in the file
	* pitivi/projectsaver.py:
	some minor corrections.
	

2007-09-12  Edward Hervey  <bilboed@bilboed.com>

	* pitivi/sourcelist.py:
	Raise an exception only if we REALLY have an existing source.

2007-09-12  Edward Hervey  <bilboed@bilboed.com>

	* pitivi/objectfactory.py:
	Clean unique serialization methods.
	Add more documentation
	* pitivi/project.py:
	Implement Serializable on Project.
	* pitivi/serializable.py:
	Add more checks. Raise Exceptions instead of print.
	* pitivi/settings.py:
	Implement Serializable on ExportSettings.
	* pitivi/sourcelist.py:
	New method : SourceList.addFactory(self, uri,factory)
	Implement Serializable on SourceList a bit better.
	* pitivi/timeline/composition.py:
	New method : Composition.cleanUp(self)
	Implement Serializable on Composition with checks.
	* pitivi/timeline/objects.py:
	raise Exceptions instead of warning for critical issues.
	* pitivi/timeline/timeline.py:
	minor cleanups
	* tests/test_file_load_save.py:
	cleanup.
	* tests/test_timeline_composition.py:
	More checks for serialization, uniqueness and correct property
	attributions.
	* tests/test_timeline_objects.py: